--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --silent"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jest": "^29.6.1",
+    "supertest": "^6.3.3"
   }
 }
